--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 katanox.rabbitmq.exchange=katanox.exchange
+katanox.defaults.currency=EUR
 katanox.rabbitmq.queue=katanox.queue
+katanox.rabbitmq.booking.processing.queue=katanox.booking.processing
 katanox.rabbitmq.routingkey=katanox.routingkey
 spring.flyway.locations=classpath:db/migration/
